[gd_scene load_steps=5 format=3 uid="uid://cg6erugp8u2cn"]

[ext_resource type="Script" uid="uid://bfxp2f1vguwg6" path="res://Interface/DungeonInterface/DungeonInterface.gd" id="1_nv7fk"]
[ext_resource type="PackedScene" uid="uid://cg4c48j5w31ij" path="res://Interface/GlobalInterface/UnitList.tscn" id="2_srn1t"]
[ext_resource type="Texture2D" uid="uid://dkdgccxy2yk4v" path="res://Graphics/Backgrounds/dungeon_3.png" id="2_yjc0f"]
[ext_resource type="PackedScene" uid="uid://bnwh3ltkopbuh" path="res://Interface/GlobalInterface/LabeledField.tscn" id="4_yjc0f"]

[node name="DungeonInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nv7fk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yjc0f")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IdleUnits" parent="HBoxContainer" instance=ExtResource("2_srn1t")]
layout_mode = 2
size_flags_horizontal = 3
list_title = "Idle Units"
is_submenu = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="DungeonName" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_yjc0f")]
layout_mode = 2
/linked_class = &"Dungeon"
/linked_property = &"dungeon_name"

[node name="DungeonStats" type="GridContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Level" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/DungeonStats" instance=ExtResource("4_yjc0f")]
layout_mode = 2
label = "Level"
/linked_class = &"Dungeon"
/linked_property = &"level_range"

[node name="Reward" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/DungeonStats" instance=ExtResource("4_yjc0f")]
layout_mode = 2
label = "Reward"
/linked_class = &"Dungeon"
/linked_property = &"reward_range"

[node name="DungeonActions" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PartyStatus" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/DungeonActions"]
layout_mode = 2
text = "Not ready"

[node name="ExploreTime" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/DungeonActions" instance=ExtResource("4_yjc0f")]
layout_mode = 2
label = "Time"
/linked_class = &"Dungeon"
/linked_property = &"quest_time"

[node name="days" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/DungeonActions"]
layout_mode = 2
text = " days"

[node name="SendParty" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/DungeonActions"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
disabled = true
text = "Send Party"

[node name="DungeonParty" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_srn1t")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
list_title = "Dungeon Party"
is_submenu = true
